--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clickygame",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://michaelrosario.github.io/clickygame",
+  "homepage": "https://michaelrosario.github.io/clickygame/",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
